# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  22 Jun 2011; Sebastian Pipping <sping@gentoo.org> gen_compile.sh:
  Make --arch-override= affect "make menuconfig" (bug #247246)

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86_64/kernel-config:
  Unset CONFIG_EMBEDDED on arch amd64

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86/kernel-config,
  arch/x86_64/kernel-config, defaults/kernel-config:
  Apply CONFIG_USB_HID=y to archs amd64/x86/default (bug #270983)

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86/kernel-config,
  arch/x86_64/kernel-config, defaults/kernel-config:
  Unset CONFIG_IDE on archs amd64/x86/default (bug #357213)

  07 Jun 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.16

  07 Jun 2011; Sebastian Pipping <sping@gentoo.org> doc/genkernel.8.txt:
  Document most undocumented boot parameters (bug #370369)

  07 Jun 2011; Sebastian Pipping <sping@gentoo.org> doc/genkernel.8.txt:
  Docs: Fix mixup of boot parameters real_init= and init_opts=

  04 Jun 2011; Sebastian Pipping <sping@gentoo.org> genkernel.conf,
  maintenance/docmatcher.py:
  Document remaining options inside genkiernel.conf (bug #367233)

  01 Jun 2011; Sebastian Pipping <sping@gentoo.org> defaults/linuxrc,
  doc/genkernel.8.txt:
  Document option lvmraid= and make it imply dolvm (bug #153502)

  31 May 2011; Sebastian Pipping <sping@gentoo.org> defaults/linuxrc,
  doc/genkernel.8.txt:
  Add rootfstype= boot parameter (bug #221245)

  Special thanks:
  - Marcin Kurek

  31 May 2011; Nelson Batalha <nelson.batalha@gmail.com> defaults/initrd.defaults:
  Add Kernel 3.0.0 support (bug #369481)

  31 May 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Output warning in warning color

  31 May 2011; Sebastian Pipping <sping@gentoo.org> doc/genkernel.8.txt,
  genkernel: