@@ -4,7 +4,6 @@
 # RAID
 MODULES_ATARAID="ataraid pdcraid hptraid"
 MODULES_DMRAID="dm-mod dm-mirror dm-crypt"
-MODULES_EVMS="dm-mod dm-snapshot dm-mirror dm-crypt dm-bbr raid0 raid1 raid456 raid5 raid6 raid10"
 MODULES_LVM="dm-mod dm-snapshot dm-mirror dm-crypt dm-bbr"
 MODULES_MDADM="dm-mod dm-snapshot dm-mirror dm-crypt dm-bbr raid0 raid1 raid456 raid5 raid6 raid10"
 
