@@ -62,10 +62,6 @@ USECOLOR="yes"
 # Add in GnuPG support
 # GPG="no"
 
-# Add in EVMS support from static binaries if they exist on the system: you
-# should run "emerge evms" first.
-# EVMS="no"
-
 # Add DMRAID support.
 # DMRAID="no"
 
